--- a/src/app/users/user/user.component.html
+++ b/src/app/users/user/user.component.html
@@ -1,1 +1,38 @@
-<p>user works!</p>
+<!-- <div class="container">
+  <div class="row d-flex justify-content-center" *ngIf="usuario">
+    <div class="col-12 col-sm-8 col-md-6 col-lg-4">
+      <div class="card col-4">
+        <img class="card-img-top" [src]="usuario.avatar" alt="User Avatar" />
+        <div class="card-body">
+          <ul class="list-group">
+            <li class="list-group-item">
+              <b>Nombre: </b> {{ usuario!.first_name }}
+            </li>
+            <li class="list-group-item">
+              <b>Apellido:</b> {{ usuario!.last_name }}
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+ -->
+<div class="d-flex justify-content-center ">
+  <div class="row " *ngIf="usuario">
+    <div class="col-4">
+      <img [src]="usuario.avatar" alt="avatar" class="img-thumbnail" />
+    </div>
+
+    <div class="col">
+      <ul class="list-group">
+        <li class="list-group-item">
+          <b>Nombre: </b> {{ usuario.first_name }}
+        </li>
+        <li class="list-group-item">
+          <b>Apellido:</b> {{ usuario.last_name }}
+        </li>
+      </ul>
+    </div>
+  </div>
+</div>
